--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.0.6'
+  ext.kotlin_version = '1.1.0-beta-17'
   ext.dagger_version = '1.2.5'
   repositories {
     jcenter()
+    maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.1" }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.0-beta1'
+    classpath 'com.android.tools.build:gradle:2.3.0-beta2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
     // NOTE: Do not place your application dependencies here; they belong
@@ -18,6 +19,7 @@ buildscript {
 allprojects {
   repositories {
     jcenter()
+    maven { url "http://dl.bintray.com/kotlin/kotlin-eap-1.1" }
   }
 }
 
